<resources>
    <string name="app_name">Congressional App Challenge</string>
    <string name="candidates">Candidates</string>
    <string name="charlie_baker">Charlie Baker</string>
    <string name="karyn_polito">Karyn Polito</string>
    <string name="jay_gonzalez">Jay Gonzalez</string>
    <string name="palfrey">Quentin Palfrey</string>
    <string name="elizabeth_warren">Elizabeth Warren</string>
    <string name="bakerpic">bakerPic</string>
    <string name="bakerprofile1"> \“Since his election as the 72nd Governor of Massachusetts in 2014, Charlie Baker has been committed to delivering bipartisan, commonsense, results-oriented leadership that has made the Commonwealth’s economy, communities, schools and families stronger than ever.\” </string>
    <string name="bakerprofile2"> \"Governor Baker, Lt. Governor Polito and their team on Beacon Hill are working hard to restore taxpayers’ and local leaders’ faith and trust in a government that works harder, smarter and more efficiently to support the people of Massachusetts, holding the line on new taxes and delivering tax relief for working families and small businesses.\" </string>
    <string name="bakerprofile3"> \"Today, the Commonwealth leads the nation in educational achievement, supported by historic investments in public education, local aid, and skill-building to strengthen a highly talented workforce. In Massachusetts, over 150,000 new jobs have been created in the last three years, the number of people working is at an all-time high and incomes are on the rise across the board. Governor Baker has been recognized as a national leader in the battle against the opioid epidemic, with nearly every state in the nation embracing Massachusetts’ landmark approach to increasing substance misuse awareness, education, treatment and prevention.\" </string>
    <string name="bakerprofile4"> \"Raised in Needham, Charlie attended Massachusetts public schools and graduated from Harvard College. He met his wife, Lauren, while earning a Master of Business Administration from the Kellogg Graduate School of Management at Northwestern University.\"</string>
    <string name="bakerprofile5"> \"Lauren Baker has dedicated her tenure as First Lady to her passion for children by expanding the impact of Wonderfund, a nonprofit supporting positive experiences for the Commonwealth’s most vulnerable kids under the care of the state’s Department of Children and Families.\"</string>
    <string name="bakermoreinfo">For more information on Charlie Baker, visit </string>
    <string name="voter_registration">Voter Registration</string>
    <string name="register">Register</string>
    <string name="politoprofile1"> \"Elected alongside Governor Charlie Baker in 2014, Lieutenant Governor Karyn Polito has championed the Baker-Polito team’s desire to give Massachusetts’ communities a seat at the table on Beacon Hill, building on a fundamental belief and understanding that the Commonwealth’s success is driven by the strength of its 351 cities and towns.\"</string>
    <string name="ltgovernor">Lt. Governor:</string>
    <string name="politoprofile2"> \"Among their first actions in office were releasing $100 million for local transportation infrastructure and establishing a Community Compact Cabinet, chaired by the Lt. Governor, to assist local communities in implementing best-practices that serve constituents more effectively and improve municipal management, reaching agreements in over 300 communities.\" </string>
    <string name="politoprofile3"> \"A longtime advocate for empowering women, Lt. Governor Polito leads the administration’s efforts to support survivors of sexual assault and domestic violence. After years of success in the private sector construction industry, she has also focused on expanding educational opportunity and access to successful careers in science, technology, engineering and math for women and students across the Commonwealth. Karyn’s commitment and dedication to supporting flexible, community-based solutions to growth dates back to her public service as a local selectman in her hometown of Shrewsbury. In 2001, she was elected to the first of five terms in the Massachusetts State House of Representatives serving the residents of the 11th Worcester District, where she championed “Jessica’s Law” toughening mandatory minimum penalties for child sex offenders.\" </string>
    <string name="politoprofile4"> \"Karyn is a lifelong resident of Shrewsbury where her family owns and operates a commercial real estate development firm and where she and her husband, Stephan M. Rodolakis are raising their two children, Bobby and Judy. She is a graduate of Worcester’s Holy Name Central Catholic High School, Boston College and the New England School of Law.\" </string>
    <string name="politomoreinfo"> For more information on Karyn Polito, visit </string>
    <string name="diehlprofile1"> \"Geoff Diehl is a State Representative from Whitman whose hard work on behalf of Massachusetts taxpayers has saved residents across the state from having to pay billions of dollars in new taxes.\"</string>
    <string name="diehlprofile2"> \"In 2010, Geoff ran for state representative and won. On January 5, 2011 he was sworn in as a member of the 187th General Court of Massachusetts, serving the people of the 7th Plymouth District (Abington, East Bridgewater and Whitman) as their state representative.\"</string>
    <string name="diehlprofile3"> \"During his time in office, Geoff has led the fight for more transparency and accountability at the State House. He has worked to increase jobs and send more local aid to cities and towns. Geoff also has been a champion of Massachusetts taxpayers and has taken bold action to protect them from tax hikes.\"</string>
    <string name="diehlprofile4"> \"In 2014, Geoff saved Massachusetts taxpayers from a $2 billion gas tax increase. The Legislature had voted the year before to link the state gas tax to inflation, so that the gas tax would increase automatically every future year. Geoff stepped forward to lead a grassroots effort for a ballot question campaign to repeal the tax hike. His group collected 146,000 signatures in favor of the ballot question, and despite special interest groups outspending his team 31 to 1, Geoff’s group won. Massachusetts drivers have avoided three straight gas tax increases as a result.\"</string>
    <string name="diehlprofile5"> \"Geoff protected taxpayers again in 2015 when there was a movement to bring the Olympics to Boston. Geoff filed an amendment to the state budget to protect Massachusetts taxpayers from being harmed by any potential cost overruns related to the Games. Geoff also worked to develop a ballot question that would have allowed the Olympics to come to Massachusetts only if taxpayers were held harmless.\"</string>
    <string name="diehlprofile6"> \"In 2016, Geoff was Co-Chairman of the Massachusetts effort to elect Donald Trump as President.\"</string>
    <string name="diehlprofile7"> \"Geoff’s service as a state representative has been recognized by a number of groups. In 2011, Geoff was recognized as an “Emerging Leader” by the State Legislative Leadership Foundation (SLLF). And, he was named as the 2016 Legislator of the Year for the Massachusetts Ambulance Association.\"</string>
    <string name="diehlmoreinfo"> For more information on Geoff Diehl, visit </string>
    <string name="warrenprofile1"> \"Elizabeth is recognized as one of the nation\'s top experts on bankruptcy and the financial pressures facing middle class families, and the Boston Globe has called her "the plainspoken voice of people getting crushed by so many predatory lenders and under regulated banks.\"</string>
    <string name="warrenprofile2"> \"She is widely credited for the original thinking, political courage, and relentless persistence that led to the creation of the Consumer Financial Protection Bureau. President Obama asked her to set up the new agency to hold Wall Street banks and other financial institutions accountable, and to protect consumers from financial tricks and traps often hidden in mortgages, credit cards and other financial products.\"</string>
    <string name="warrenprofile3"> \"In the aftermath of the 2008 financial crisis, Warren served as Chair of the Congressional Oversight Panel for the Troubled Asset Relief Program (TARP). Her independent and tireless efforts to protect taxpayers, to hold Wall Street accountable, and to ensure tough oversight of both the Bush and Obama Administrations won praise from both sides of the aisle. The Boston Globe named Elizabeth Warren Bostonian of the Year and TIME Magazine called her a "New Sheriff of Wall Street" for her oversight efforts.\"</string>
    <string name="ayyaduraprofile1"> \"I am running for United States Senate from Massachusetts to be a 21st century Senator. We stand at the crossroads where we can either head into a Golden Age or into the Darkness. Incredible innovation and solutions, which have been created by everyday Americans, already exist for energy, education, health, affordable housing and much more. What stands in the way are the old guard of career politicians, political hacks, lawyer-lobbyists and academics who pervade Washington and local government with corruption and crony capitalism that chokes and suffocates these innovations and solutions from reaching us. America becomes great when innovators, entrepreneurs, working people with skills and those committed to using common sense and reason run this country. The Founders of America were blacksmiths, engineers, soldiers, architects, entrepreneurs, scientists — they actually worked for a living and produced through their labor, products and services to help other citizens.\"</string>
    <string name="ayyaduraprofile2"> \"I stand before you as someone who is a personification of the American Dream. My parents and I left the caste system of India in 1970 where we were considered low caste “Untouchables” and “Deplorables”. We first settled in Paterson, NJ and I went through the public school system where I was fortunate to have come across incredibly dedicated teachers, coaches and mentors.\"</string>
    <string name="ayyaduraprofile3"> \"On my 7th birthday, in 1970, I left India and came to America: to this land of incredible opportunity. As a kid, I learned from my parents, teachers, coaches, and friends that what mattered most was Truth — to uncover it, share it and fight for it. That core value is THE foundation of the America Dream. And my life has been about fighting for Truth, at every step.\"</string>
    <string name="ayyaduraprofile4"> \"The Founding Fathers created a revolutionary nation in which innovation, education, creativity, and meritocracy flourished. Those core values drew my family to immigrate to the United States, and I’ll always be grateful for the opportunities I’ve found here. Now I’m committed to preserving, protecting, and expanding those opportunities for the citizens of Massachusetts and for all Americans. That’s the new American Revolution, and I hope you’ll join me in this fight.\"</string>
    <string name="ayyaduraprofile5"> \"I have lived the American Dream. I grew up playing baseball, playing soccer, having a paper route, while running my own small lawn mowing and snow shoveling businesses as a kid. Being selected by American Legion Boys State to represent my high school, and later being awarded a U.S. Fulbright Scholarship were all part of this incredible journey. What an honor to be in the state of Massachusetts — the home of the Red Sox, Patriots, Bruins and Celtics!\"</string>
</resources>