<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/drawer_layout">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteTheme"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/blueTheme">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:background="@color/blueThemeTint">

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cranberryTheme">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/charlie_baker"
                    android:textColor="@color/white"
                    android:textSize="55sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="For Governer - Republican"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cranberryTheme"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/blueThemeTint">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@mipmap/baker"
            android:gravity="center"
            android:paddingTop="20dp"
            android:contentDescription="@string/bakerpic"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:gravity="center"
            android:textSize='20sp'
            android:textColor="@color/white"
            android:text="@string/bakerprofile1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:gravity="center"
            android:textSize='20sp'
            android:textColor="@color/white"
            android:text="@string/bakerprofile2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:gravity="center"
            android:textSize='20sp'
            android:textColor="@color/white"
            android:text="@string/bakerprofile3"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:gravity="center"
            android:textSize='20sp'
            android:textColor="@color/white"
            android:text="@string/bakerprofile4"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:gravity="center"
            android:textSize='20sp'
            android:textColor="@color/white"
            android:text="@string/bakerprofile5"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:gravity="center"
            android:textSize='20sp'
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:gravity="center"
            android:textSize='20sp'
            android:textColor="@color/white"
            android:text="@string/bakermoreinfo"/>

        </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blueThemeTint"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:paddingBottom="10dp">

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cranberryTheme">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/karyn_polito"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="For Lieutenant Governer - Republican"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cranberryTheme"
            android:layout_marginTop="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blueThemeTint"
            android:orientation="vertical">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:src="@mipmap/polito"
            android:layout_gravity="center_horizontal"
            android:paddingTop="40dp"
            android:contentDescription="@string/karyn_polito"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:gravity="center"
            android:textSize='20sp'
            android:textColor="@color/whiteTheme"
            android:text="@string/politoprofile1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:gravity="center"
            android:textSize='20sp'
            android:textColor="@color/whiteTheme"
            android:text="@string/politoprofile2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:gravity="center"
            android:textSize='20sp'
            android:textColor="@color/whiteTheme"
            android:text="@string/politoprofile3"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:gravity="center"
            android:textSize='20sp'
            android:textColor="@color/whiteTheme"
            android:text="@string/politoprofile4"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:gravity="center"
            android:textSize='20sp'
            android:textColor="@color/whiteTheme"
            android:text="@string/politomoreinfo"/>
        </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>

    <android.support.design.widget.NavigationView
        android:id="@+id/navview_home"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/cranberryTheme"
        app:itemTextColor="@color/white"
        app:menu="@menu/drawer_view">
    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
