<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/drawer_layout">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/whiteTheme"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/blueTheme">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:background="@color/blueThemeTint">

                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/purpleTheme">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Shiva Ayyadurai"
                        android:textColor="@color/white"
                        android:textSize="55sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="For Senate - Independent"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/purpleTheme"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/blueThemeTint">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:src="@mipmap/ayyadurai"
                        android:gravity="center"
                        android:paddingTop="20dp"
                        android:contentDescription="ayyaduraipic"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="30dp"
                        android:gravity="center"
                        android:textSize='20sp'
                        android:textColor="@color/white"
                        android:text="@string/ayyaduraprofile1"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="20dp"
                        android:gravity="center"
                        android:textSize='20sp'
                        android:textColor="@color/white"
                        android:text="@string/ayyaduraprofile2"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="20dp"
                        android:gravity="center"
                        android:textSize='20sp'
                        android:textColor="@color/white"
                        android:text="@string/ayyaduraprofile3"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="20dp"
                        android:gravity="center"
                        android:textSize='20sp'
                        android:textColor="@color/white"
                        android:text="@string/ayyaduraprofile4"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="20dp"
                        android:gravity="center"
                        android:textSize='20sp'
                        android:textColor="@color/white"
                        android:text="@string/ayyaduraprofile5"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="20dp"
                        android:gravity="center"
                        android:textSize='20sp'
                        android:textColor="@color/white"
                        android:text="@string/diehlprofile6"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="20dp"
                        android:gravity="center"
                        android:textSize='20sp'
                        android:textColor="@color/white"
                        android:text="@string/diehlprofile7"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="20dp"
                        android:gravity="center"
                        android:textSize='20sp'
                        android:textColor="@color/white"
                        android:text="@string/diehlmoreinfo"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.NavigationView
        android:id="@+id/navview_home"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/cranberryTheme"
        app:itemTextColor="@color/white"
        app:menu="@menu/drawer_view">
    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
